--- a/CascadeSolution/Cascade.Web/Views/Account/ChangePassword.cshtml
+++ b/CascadeSolution/Cascade.Web/Views/Account/ChangePassword.cshtml
@@ -1,41 +1,58 @@
 ﻿@model Cascade.Web.Models.ChangePasswordModel
-
 @{
-    ViewBag.Title = "Change Password";
+    Layout = null;
 }
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    @Styles.Render("~/Content/themes/base/css")
+    <title>ChangePassword</title>
+</head>
+<style>
+    body
+    {
+        background-color: #336699;
+        background-repeat: no-repeat;
+        background-position: center;
+        font-family: Verdana;
+        font-size:small;
+    }
+</style>
+<body>
+    <div id="changePasswordContainer">
+        Passwords must be at least @Membership.MinRequiredPasswordLength characters long.
+        @using (Html.BeginForm())
+        {
+            @Html.ValidationSummary()
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-    <h2>Use this form to change your password.</h2>
-</hgroup>
-
-<p class="message-info">
-    Passwords must be at least @Membership.MinRequiredPasswordLength characters long.
-</p>
-
-@using (Html.BeginForm()) {
-    @Html.ValidationSummary()
-
-    <fieldset>
-        <legend>Change Password Form</legend>
-        <ol>
-            <li>
-                @Html.LabelFor(m => m.OldPassword)
-                @Html.PasswordFor(m => m.OldPassword)                
-            </li>
-            <li>
-                @Html.LabelFor(m => m.NewPassword)
-                @Html.PasswordFor(m => m.NewPassword)                
-            </li>
-            <li>
-                @Html.LabelFor(m => m.ConfirmPassword)
-                @Html.PasswordFor(m => m.ConfirmPassword)                
-            </li>
-        </ol>
-        <input type="submit" value="Change password" />
-    </fieldset>
-}
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+            <fieldset>
+                <legend>Change Password Form</legend>
+                <ol>
+                    <li>
+                        @Html.LabelFor(m => m.OldPassword)
+                        @Html.PasswordFor(m => m.OldPassword)
+                    </li>
+                    <li>
+                        @Html.LabelFor(m => m.NewPassword)
+                        @Html.PasswordFor(m => m.NewPassword)
+                    </li>
+                    <li>
+                        @Html.LabelFor(m => m.ConfirmPassword)
+                        @Html.PasswordFor(m => m.ConfirmPassword)
+                    </li>
+                </ol>
+                <input type="submit" value="Change password" style="background-color:#336699; color:White"/>
+            </fieldset>
+        }
+    </div>
+    <script src="~/Scripts/jquery-1.7.1.min.js" type="text/javascript"></script>
+    <script src="~/Scripts/jquery-ui-1.8.11.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#changePasswordContainer').dialog({ modal: true, title: 'Change Password:', autoOpen: false, width: 500, height: 300 });
+            $('#changePasswordContainer').dialog('open');
+        });
+    </script>
+</body>
+</html>
