--- a/CascadeSolution/Cascade.Web/Areas/Compliance/Views/Home/Create.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Compliance/Views/Home/Create.cshtml
@@ -149,7 +149,7 @@
                                 :
                             </td>
                             <td style="text-align: left; width: 20%">
-                                <select data-bind="options:$parent.debtorIdentities,optionsValue:'Value', optionsText: 'Text', value: debtorIdentityVerified">
+                                <select data-bind="options:$parent.debtorIdentities,optionsValue:'Value', optionsText: 'Text', value: debtorIdentityVerified_YesNo">
                                 </select>
                             </td>
                         </tr>
@@ -288,7 +288,7 @@
                                 :
                             </td>
                             <td style="text-align: left; width: 20%">
-                                <select data-bind="options:$parent.disputeDebtOptions,optionsValue:'Value', optionsText: 'Text', value: disputeDebt">
+                                <select data-bind="options:$parent.disputeDebtOptions,optionsValue:'Value', optionsText: 'Text', value: disputeDebt_YesNo">
                                 </select>
                             </td>
                         </tr>
@@ -308,7 +308,7 @@
                                 :
                             </td>
                             <td style="text-align: left; width: 20%">
-                                <select data-bind="options:$parent.disputeDebtAmtOptions,optionsValue:'Value', optionsText: 'Text', value: disputeDebtAmount">
+                                <select data-bind="options:$parent.disputeDebtAmtOptions,optionsValue:'Value', optionsText: 'Text', value: disputeDebtAmount_YesNo">
                                 </select>
                             </td>
                         </tr>
@@ -327,7 +327,7 @@
                                 :
                             </td>
                             <td style="text-align: left; width: 20%">
-                                <select data-bind="options:$parent.disputeDebtDueDateOptions,optionsValue:'Value', optionsText: 'Text', value: disputeDebtDueDate">
+                                <select data-bind="options:$parent.disputeDebtDueDateOptions,optionsValue:'Value', optionsText: 'Text', value: disputeDebtDueDate_YesNo">
                                 </select>
                             </td>
                         </tr>
@@ -461,7 +461,7 @@
                                 :
                             </td>
                             <td style="text-align: left; width: 20%">
-                                <select data-bind="options:$parent.moreInfoRecvdDebtorOptions,optionsValue:'Value', optionsText: 'Text', value:moreInfoReceivedFromDebtor">
+                                <select data-bind="options:$parent.moreInfoRecvdDebtorOptions,optionsValue:'Value', optionsText: 'Text', value:moreInfoReceivedFromDebtor_YesNo">
                                 </select>
                             </td>
                         </tr>
@@ -506,7 +506,7 @@
                                 :
                             </td>
                             <td style="text-align: left; width: 20%">
-                                <select data-bind="options:$parent.complaintSubmittedToOwnerOptions,optionsValue:'Value', optionsText: 'Text', value:complaintSubmittedToOwner">
+                                <select data-bind="options:$parent.complaintSubmittedToOwnerOptions,optionsValue:'Value', optionsText: 'Text', value:complaintSubmittedToOwner_YesNo">
                                 </select>
                             <td style="text-align: right; width: 20%">
                                 Date Submitted
@@ -544,7 +544,7 @@
                                 :
                             </td>
                             <td style="text-align: left; width: 20%">
-                                <select data-bind="options:$parent.moreInfoFromAgencyOptions,optionsValue:'Value', optionsText: 'Text', value:moreInfoFromAgency">
+                                <select data-bind="options:$parent.moreInfoFromAgencyOptions,optionsValue:'Value', optionsText: 'Text', value:moreInfoFromAgency_YesNo">
                                 </select>
                             <td style="text-align: right; width: 20%">
                                 Date Requested
@@ -674,7 +674,7 @@
                                 :
                             </td>
                             <td style="text-align: left; width: 20%">
-                                <select data-bind="options:$parent.debtorAgreeOptions,optionsValue:'Value', optionsText: 'Text', value:debtorAgree">
+                                <select data-bind="options:$parent.debtorAgreeOptions,optionsValue:'Value', optionsText: 'Text', value:debtorAgree_YesNo">
                                 </select>
                             <td style="text-align: right; width: 20%">
                                 Need further Action?
@@ -683,7 +683,7 @@
                                 :
                             </td>
                             <td style="text-align: left; width: 20%">
-                                <select data-bind="options:$parent.needFurtherActionOptions,optionsValue:'Value', optionsText: 'Text', value:needFurtherAction">
+                                <select data-bind="options:$parent.needFurtherActionOptions,optionsValue:'Value', optionsText: 'Text', value:needFurtherAction_YesNo">
                                 </select>
                             </td>
                         </tr>
@@ -722,67 +722,14 @@
 
         function pageViewModel(userId, userAgency, userRole) {
             var self = this;
-            self.complianceModel = new complianceVM(userId, userAgency);
-            self.populateComplainceFromDebtor = function (account, firstName, lastName, dob, address, city, state, zip, ssn, phoneCell, phoneHome, phoneWork, debtCurrentBalance, debtorPurchaseBalance, creditorName, debtProductId, debtPurchaseBalance, debtCurrentBalance, disputeDebt, disputeDebtAmount, disputeDebtDueDate, complaintID, complaintDate, complaintMethodId, complaintIssueId, complaintNotes, complaintSubmitedToAgency, complaintSubmitedToAgencyDate, moreInfoReqdFromDebtor_YesNo, moreInfoRequestedDate, moreInfoRequested, moreInfoReceivedFromDebtor, moreInfoReceivedDate, moreInfoReceived, complaintSubmittedToOwner, complaintSubmittedDate, timeToSubmitDays, moreInfoFromAgency, moreInfoFromAgencyRequestedDate, moreInfoFromAgencyRequested, moreInfoFromAgencyReceived, moreInfoFromAgencyReceivedDate, ownerResponseId, ownerResponseDate, ownerResponseDays, agencyResponseToDebtorDate, totalResponseTimeDays, debtorAgree, needFurtherAction, finalActionStepId, createdBy) {
-                self.complianceModel.account(account);
-                self.complianceModel.firstName(firstName);
-                self.complianceModel.lastName(lastName);
-                self.complianceModel.dob(dob);
-                self.complianceModel.address(address);
-                self.complianceModel.city(city);
-                self.complianceModel.state(state);
-                self.complianceModel.zip(zip);
-                self.complianceModel.lastFourSSN(ssn);
-                self.complianceModel.mobilePhone(phoneCell);
-                self.complianceModel.homePhone(phoneHome);
-                self.complianceModel.workPhone(phoneWork);
-                self.complianceModel.debtCurrentBalance(debtCurrentBalance);
-                self.complianceModel.debtPurchaseBalance(debtorPurchaseBalance);
-                self.complianceModel.creditorName(creditorName);
-                self.complianceModel.debtProductId(debtProductId);
-                self.complianceModel.debtPurchaseBalance(((debtPurchaseBalance == '') ? '' : formatCurrency(debtPurchaseBalance)));
-                self.complianceModel.debtCurrentBalance(((debtCurrentBalance == '') ? '' : formatCurrency(debtCurrentBalance)));
-                self.complianceModel.disputeDebt(disputeDebt);
-                self.complianceModel.disputeDebtAmount(disputeDebtAmount);
-                self.complianceModel.disputeDebtDueDate(disputeDebtDueDate);
-                self.complianceModel.complaintID(complaintID);
-                self.complianceModel.complaintDate(getFormatedDate(complaintDate));
-                self.complianceModel.complaintReceivedByMethodId(complaintMethodId);
-                self.complianceModel.complaintIssueId(complaintIssueId);
-                self.complianceModel.complaintNotes(complaintNotes);
-                self.complianceModel.complaintSubmitedToAgency_YesNo(complaintSubmitedToAgency);
-                self.complianceModel.complaintSubmitedToAgencyDate(getFormatedDate(complaintSubmitedToAgencyDate));
-                self.complianceModel.moreInfoReqdFromDebtor_YesNo(moreInfoReqdFromDebtor_YesNo);
-                self.complianceModel.moreInfoRequestedDate(getFormatedDate(moreInfoRequestedDate));
-                self.complianceModel.moreInfoRequested(moreInfoRequested);
-                self.complianceModel.moreInfoReceivedFromDebtor(moreInfoReceivedFromDebtor);
-                self.complianceModel.moreInfoReceivedDate(getFormatedDate(moreInfoReceivedDate));
-                self.complianceModel.moreInfoReceived(moreInfoReceived);
-                self.complianceModel.complaintSubmittedToOwner();
-                self.complianceModel.complaintSubmittedDate(getFormatedDate(complaintSubmittedDate));
-                self.complianceModel.timeToSubmitDays(timeToSubmitDays);
-                self.complianceModel.moreInfoFromAgency(moreInfoFromAgency);
-                self.complianceModel.moreInfoFromAgencyRequestedDate(getFormatedDate(moreInfoFromAgencyRequestedDate));
-                self.complianceModel.moreInfoFromAgencyRequested(moreInfoFromAgencyRequested);
-                self.complianceModel.moreInfoFromAgencyReceived(moreInfoFromAgencyReceived);
-                self.complianceModel.moreInfoFromAgencyReceivedDate(getFormatedDate(moreInfoFromAgencyReceivedDate));
-                self.complianceModel.ownerResponseId(ownerResponseId);
-                self.complianceModel.ownerResponseDate(getFormatedDate(ownerResponseDate));
-                self.complianceModel.ownerResponseDays(ownerResponseDays);
-                self.complianceModel.agencyResponseToDebtorDate(getFormatedDate(agencyResponseToDebtorDate));
-                self.complianceModel.totalResponseTimeDays(totalResponseTimeDays);
-                self.complianceModel.debtorAgree(debtorAgree);
-                self.complianceModel.needFurtherAction(needFurtherAction);
-                self.complianceModel.finalActionStepId(finalActionStepId);
-                //self.complianceModel.createdBy(createdBy)
-            }
+            self.complianceModel = new complianceVM(userId, userAgency);            
             self.pimsAccountNumber = ko.observable('');
             self.debtors = ko.observableArray([]);
             self.userRole = ko.observable(userRole);
 
             self.getComplaint = function (account) {
                 function setComplaint(data) {
-                    self.populateComplainceFromDebtor(data.Account, data.FirstName, data.LastName, data.DOB, data.Address, data.City, data.State, data.Zip, data.LastFourSSN, data.MobilePhone, data.HomePhone, data.WorkPhone, data.DebtCurrentBalance, data.DebtPurchaseBalance, data.CreditorName, data.DebtProductId, data.DebtPurchaseBalance, data.DebtCurrentBalance, data.DisputeDebt, data.DisputeDebtAmount, data.DisputeDebtDueDate, data.ComplaintID, data.ComplaintDate, data.ComplaintReceivedByMethodId, data.ComplaintIssueId, data.ComplaintNotes, data.ComplaintSubmitedToAgency, data.ComplaintSubmitedToAgencyDate, data.moreInfoReqdFromDebtor_YesNo, data.MoreInfoRequestedDate, data.MoreInfoRequested, data.MoreInfoReceivedFromDebtor, data.MoreInfoReceivedDate, data.MoreInfoReceived, data.ComplaintSubmittedToOwner, data.ComplaintSubmittedDate, data.TimeToSubmitDays, data.MoreInfoFromAgency, data.MoreInfoFromAgencyRequestedDate, data.MoreInfoFromAgencyRequested, data.MoreInfoFromAgencyReceived, data.MoreInfoFromAgencyReceivedDate, data.OwnerResponseId, data.OwnerResponseDate, data.OwnerResponseDays, data.AgencyResponseToDebtorDate, data.TotalResponseTimeDays, data.DebtorAgree, data.NeedFurtherAction, data.FinalActionStepId, data.CreatedBy);
+                    self.complianceModel.populateCompliance(data.Account, data.FirstName, data.LastName, data.DOB, data.Address, data.City, data.State, data.Zip, data.LastFourSSN, data.MobilePhone, data.HomePhone, data.WorkPhone, data.DebtorIdentityVerifiedYN, data.DebtCurrentBalance, data.DebtPurchaseBalance, data.CreditorName, data.DebtProductId, data.DebtPurchaseBalance, data.DebtCurrentBalance, data.DisputeDebtYN, data.DisputeDebtAmountYN, data.DisputeDebtDueDateYN, data.ComplaintID, data.ComplaintDate, data.ComplaintReceivedByMethodId, data.ComplaintIssueId, data.ComplaintNotes, data.ComplaintSubmitedToAgencyYN, data.ComplaintSubmitedToAgencyDate, data.MoreInfoReqdFromDebtorYN, data.MoreInfoRequestedDate, data.MoreInfoRequested, data.MoreInfoReceivedFromDebtorYN, data.MoreInfoReceivedDate, data.MoreInfoReceived, data.ComplaintSubmittedToOwnerYN, data.ComplaintSubmittedDate, data.TimeToSubmitDays, data.MoreInfoFromAgencyYN, data.MoreInfoFromAgencyRequestedDate, data.MoreInfoFromAgencyRequested, data.MoreInfoFromAgencyReceived, data.MoreInfoFromAgencyReceivedYN, data.MoreInfoFromAgencyReceivedDate, data.OwnerResponseId, data.OwnerResponseDate, data.OwnerResponseDays, data.AgencyResponseToDebtorDate, data.TotalResponseTimeDays, data.DebtorAgreeYN, data.NeedFurtherActionYN, data.FinalActionStepId, data.CreatedBy, null, null);
                     self.complianceModel.complaintID(self.createComplaintId());
                 };
                 self.pimsAccountNumber(account);
