--- a/CascadeSolution/Cascade.Web/Areas/Compliance/Views/Home/ViewEdit.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Compliance/Views/Home/ViewEdit.cshtml
@@ -118,7 +118,7 @@
                                             :
                                         </td>
                                         <td style="text-align: left; width: 20%">
-                                            <select data-bind="options:$parent.debtorIdentities,optionsValue:'Value', optionsText: 'Text', value: debtorIdentityVerified">
+                                            <select data-bind="options:$parent.debtorIdentities,optionsValue:'Value', optionsText: 'Text', value: debtorIdentityVerified_YesNo">
                                             </select>
                                         </td>
                                     </tr>
@@ -257,7 +257,7 @@
                                                 :
                                             </td>
                                             <td style="text-align: left; width: 20%">
-                                                <select data-bind="options:$parent.disputeDebtOptions,optionsValue:'Value', optionsText: 'Text', value: disputeDebt">
+                                                <select data-bind="options:$parent.disputeDebtOptions,optionsValue:'Value', optionsText: 'Text', value: disputeDebt_YesNo">
                                                 </select>
                                             </td>
                                     </tr>
@@ -277,7 +277,7 @@
                                                 :
                                             </td>
                                             <td style="text-align: left; width: 20%">
-                                                <select data-bind="options:$parent.disputeDebtAmtOptions,optionsValue:'Value', optionsText: 'Text', value: disputeDebtAmount">
+                                                <select data-bind="options:$parent.disputeDebtAmtOptions,optionsValue:'Value', optionsText: 'Text', value: disputeDebtAmount_YesNo">
                                                 </select>
                                             </td>
                                     </tr>
@@ -296,7 +296,7 @@
                                                 :
                                             </td>
                                             <td style="text-align: left; width: 20%">
-                                                <select data-bind="options:$parent.disputeDebtDueDateOptions,optionsValue:'Value', optionsText: 'Text', value: disputeDebtDueDate">
+                                                <select data-bind="options:$parent.disputeDebtDueDateOptions,optionsValue:'Value', optionsText: 'Text', value: disputeDebtDueDate_YesNo">
                                                 </select>
                                             </td>
                                     </tr>
@@ -431,7 +431,7 @@
                                                 :
                                             </td>
                                             <td style="text-align: left; width: 20%">
-                                                <select data-bind="options:$parent.moreInfoRecvdDebtorOptions,optionsValue:'Value', optionsText: 'Text', value:moreInfoReceivedFromDebtor">
+                                                <select data-bind="options:$parent.moreInfoRecvdDebtorOptions,optionsValue:'Value', optionsText: 'Text', value:moreInfoReceivedFromDebtor_YesNo">
                                                 </select>
                                             </td>
                                     </tr>
@@ -476,7 +476,7 @@
                                             :
                                         </td>
                                         <td style="text-align: left; width: 20%">
-                                            <select data-bind="options:$parent.complaintSubmittedToOwnerOptions,optionsValue:'Value', optionsText: 'Text', value:complaintSubmittedToOwner">
+                                            <select data-bind="options:$parent.complaintSubmittedToOwnerOptions,optionsValue:'Value', optionsText: 'Text', value:complaintSubmittedToOwner_YesNo">
                                             </select>
                                             <td style="text-align: right; width: 20%">
                                                 Date Submitted
@@ -515,7 +515,7 @@
                                             :
                                         </td>
                                         <td style="text-align: left; width: 20%">
-                                            <select data-bind="options:$parent.moreInfoFromAgencyOptions,optionsValue:'Value', optionsText: 'Text', value:moreInfoFromAgency">
+                                            <select data-bind="options:$parent.moreInfoFromAgencyOptions,optionsValue:'Value', optionsText: 'Text', value:moreInfoFromAgency_YesNo">
                                             </select>
                                             <td style="text-align: right; width: 20%">
                                                 Date Requested
@@ -645,7 +645,7 @@
                                             :
                                         </td>
                                         <td style="text-align: left; width: 20%">
-                                            <select data-bind="options:$parent.debtorAgreeOptions,optionsValue:'Value', optionsText: 'Text', value:debtorAgree">
+                                            <select data-bind="options:$parent.debtorAgreeOptions,optionsValue:'Value', optionsText: 'Text', value:debtorAgree_YesNo">
                                             </select>
                                             <td style="text-align: right; width: 20%">
                                                 Need further Action?
@@ -654,7 +654,7 @@
                                                 :
                                             </td>
                                             <td style="text-align: left; width: 20%">
-                                                <select data-bind="options:$parent.needFurtherActionOptions,optionsValue:'Value', optionsText: 'Text', value:needFurtherAction">
+                                                <select data-bind="options:$parent.needFurtherActionOptions,optionsValue:'Value', optionsText: 'Text', value:needFurtherAction_YesNo">
                                                 </select>
                                             </td>
                                     </tr>
@@ -696,81 +696,16 @@
         function pageViewModel(userId, userAgency, accountNumber, userRole) {
             var self = this;
 
-            self.complianceModel = new complianceVM(userId, userAgency);
-            self.populateComplainceFromDebtor = function (account, firstName, lastName, dob, address, city, state, zip, ssn, phoneCell, phoneHome, phoneWork, debtCurrentBalance, debtorPurchaseBalance, creditorName, debtProductId, debtPurchaseBalance, debtCurrentBalance, disputeDebt, disputeDebtAmount, disputeDebtDueDate, complaintID, complaintDate, complaintMethodId, complaintIssueId, complaintNotes, complaintSubmitedToAgency, complaintSubmitedToAgencyDate, moreInfoReqdFromDebtor_YesNo, moreInfoRequestedDate, moreInfoRequested, moreInfoReceivedFromDebtor, moreInfoReceivedDate, moreInfoReceived, complaintSubmittedToOwner, complaintSubmittedDate, timeToSubmitDays, moreInfoFromAgency, moreInfoFromAgencyRequestedDate, moreInfoFromAgencyRequested, moreInfoFromAgencyReceived, moreInfoFromAgencyReceivedDate, ownerResponseId, ownerResponseDate, ownerResponseDays, agencyResponseToDebtorDate, totalResponseTimeDays, debtorAgree, needFurtherAction, finalActionStepId, createdBy, complaintDoc, debtOwnerProcessDoc) {
-                self.complianceModel.account(account);
-                self.complianceModel.firstName(firstName);
-                self.complianceModel.lastName(lastName);
-                self.complianceModel.dob(dob);
-                self.complianceModel.address(address);
-                self.complianceModel.city(city);
-                self.complianceModel.state(state);
-                self.complianceModel.zip(zip);
-                self.complianceModel.lastFourSSN(ssn);
-                self.complianceModel.mobilePhone(phoneCell);
-                self.complianceModel.homePhone(phoneHome);
-                self.complianceModel.workPhone(phoneWork);
-                self.complianceModel.debtCurrentBalance(debtCurrentBalance);
-                self.complianceModel.debtPurchaseBalance(debtorPurchaseBalance);
-                self.complianceModel.creditorName(creditorName);
-                self.complianceModel.debtProductId(debtProductId);
-                self.complianceModel.debtPurchaseBalance(((debtPurchaseBalance == '') ? '' : formatCurrency(debtPurchaseBalance)));
-                self.complianceModel.debtCurrentBalance(((debtCurrentBalance == '') ? '' : formatCurrency(debtCurrentBalance)));
-                self.complianceModel.disputeDebt(disputeDebt);
-                self.complianceModel.disputeDebtAmount(disputeDebtAmount);
-                self.complianceModel.disputeDebtDueDate(disputeDebtDueDate);
-                self.complianceModel.complaintID(complaintID);
-                self.complianceModel.complaintDate(getFormatedDate(complaintDate));
-                self.complianceModel.complaintReceivedByMethodId(complaintMethodId);
-                self.complianceModel.complaintIssueId(complaintIssueId);
-                self.complianceModel.complaintNotes(complaintNotes);
-                self.complianceModel.complaintSubmitedToAgency_YesNo((complaintSubmitedToAgency) ? 'true':'false');
-                self.complianceModel.complaintSubmitedToAgencyDate(getFormatedDate(complaintSubmitedToAgencyDate));
-                self.complianceModel.moreInfoReqdFromDebtor_YesNo((moreInfoReqdFromDebtor_YesNo) ? 'true' : 'false');
-                self.complianceModel.moreInfoRequestedDate(getFormatedDate(moreInfoRequestedDate));
-                self.complianceModel.moreInfoRequested(moreInfoRequested);
-                self.complianceModel.moreInfoReceivedFromDebtor(moreInfoReceivedFromDebtor);
-                self.complianceModel.moreInfoReceivedDate(getFormatedDate(moreInfoReceivedDate));
-                self.complianceModel.moreInfoReceived(moreInfoReceived);
-                self.complianceModel.complaintSubmittedToOwner();
-                self.complianceModel.complaintSubmittedDate(getFormatedDate(complaintSubmittedDate));
-                self.complianceModel.timeToSubmitDays(timeToSubmitDays);
-                self.complianceModel.moreInfoFromAgency(moreInfoFromAgency);
-                self.complianceModel.moreInfoFromAgencyRequestedDate(getFormatedDate(moreInfoFromAgencyRequestedDate));
-                self.complianceModel.moreInfoFromAgencyRequested(moreInfoFromAgencyRequested);
-                self.complianceModel.moreInfoFromAgencyReceived(moreInfoFromAgencyReceived);
-                self.complianceModel.moreInfoFromAgencyReceivedDate(getFormatedDate(moreInfoFromAgencyReceivedDate));
-                self.complianceModel.ownerResponseId(ownerResponseId);
-                self.complianceModel.ownerResponseDate(getFormatedDate(ownerResponseDate));
-                self.complianceModel.ownerResponseDays(ownerResponseDays);
-                self.complianceModel.agencyResponseToDebtorDate(getFormatedDate(agencyResponseToDebtorDate));
-                self.complianceModel.totalResponseTimeDays(totalResponseTimeDays);
-                self.complianceModel.debtorAgree(debtorAgree);
-                self.complianceModel.needFurtherAction(needFurtherAction);
-                self.complianceModel.finalActionStepId(finalActionStepId);
-                //self.complianceModel.createdBy(createdBy)
-                log(debtOwnerProcessDoc);
-                if (complaintDoc != null) {
-                    self.complianceModel.complaintDocument(complaintDoc.split('_')[1]);
-                    self.complianceModel.complaintDocUrl(baseUrl + '/Compliance/Home/DownloadDoc?fileName=' + complaintDoc);
-                    log(self.complianceModel.complaintDocUrl());
-                }
-                if (debtOwnerProcessDoc != null) {
-                    self.complianceModel.debtOwnerProcessDocument(debtOwnerProcessDoc.split('_')[1]);
-                    self.complianceModel.debtOwnerProcessDocUrl(baseUrl + '/Compliance/Home/DownloadDoc?fileName=' + debtOwnerProcessDoc);
-                }
-            }
+            self.complianceModel = new complianceVM(userId, userAgency);            
             self.pimsAccountNumber = ko.observable(accountNumber);
             self.debtors = ko.observableArray([]);
             self.userRole = ko.observable(userRole);
             self.getComplaint = function (account) {
                 //log(debtor.account());
                 function setComplaint(data) {
-                    log(data);
-                    self.populateComplainceFromDebtor(data.Account, data.FirstName, data.LastName, data.DOB, data.Address, data.City, data.State, data.Zip, data.LastFourSSN, data.MobilePhone, data.HomePhone, data.WorkPhone, ((data.DebtCurrentBalance == undefined) ? '' : formatCurrency(data.DebtCurrentBalance)), ((data.DebtPurchaseBalance == undefined) ? '' : formatCurrency(data.DebtPurchaseBalance)), data.CreditorName, data.DebtProductId, data.DebtPurchaseBalance, data.DebtCurrentBalance, data.DisputeDebt, data.DisputeDebtAmount, data.DisputeDebtDueDate, data.ComplaintID, data.ComplaintDate, data.ComplaintReceivedByMethodId, data.ComplaintIssueId, data.ComplaintNotes, data.ComplaintSubmitedToAgency, data.ComplaintSubmitedToAgencyDate, data.MoreInfoReqdFromDebtor, data.MoreInfoRequestedDate, data.MoreInfoRequested, data.MoreInfoReceivedFromDebtor, data.MoreInfoReceivedDate, data.MoreInfoReceived, data.ComplaintSubmittedToOwner, data.ComplaintSubmittedDate, data.TimeToSubmitDays, data.MoreInfoFromAgency, data.MoreInfoFromAgencyRequestedDate, data.MoreInfoFromAgencyRequested, data.MoreInfoFromAgencyReceived, data.MoreInfoFromAgencyReceivedDate, data.OwnerResponseId, data.OwnerResponseDate, data.OwnerResponseDays, data.AgencyResponseToDebtorDate, data.TotalResponseTimeDays, data.DebtorAgree, data.NeedFurtherAction, data.FinalActionStepId, data.CreatedBy, data.ComplaintDocument, data.DebtOwnerProcessDocument);
+                    self.complianceModel.populateCompliance(data.Account, data.FirstName, data.LastName, data.DOB, data.Address, data.City, data.State, data.Zip, data.LastFourSSN, data.MobilePhone, data.HomePhone, data.WorkPhone, data.DebtorIdentityVerifiedYN, ((data.DebtCurrentBalance == undefined) ? '' : formatCurrency(data.DebtCurrentBalance)), ((data.DebtPurchaseBalance == undefined) ? '' : formatCurrency(data.DebtPurchaseBalance)), data.CreditorName, data.DebtProductId, data.DebtPurchaseBalance, data.DebtCurrentBalance, data.DisputeDebtYN, data.DisputeDebtAmountYN, data.DisputeDebtDueDateYN, data.ComplaintID, data.ComplaintDate, data.ComplaintReceivedByMethodId, data.ComplaintIssueId, data.ComplaintNotes, data.ComplaintSubmitedToAgencyYN, data.ComplaintSubmitedToAgencyDate, data.MoreInfoReqdFromDebtorYN, data.MoreInfoRequestedDate, data.MoreInfoRequested, data.MoreInfoReceivedFromDebtorYN, data.MoreInfoReceivedDate, data.MoreInfoReceived, data.ComplaintSubmittedToOwnerYN, data.ComplaintSubmittedDate, data.TimeToSubmitDays, data.MoreInfoFromAgencyYN, data.MoreInfoFromAgencyRequestedDate, data.MoreInfoFromAgencyRequested, data.MoreInfoFromAgencyReceived, data.MoreInfoFromAgencyReceivedYN, data.MoreInfoFromAgencyReceivedDate, data.OwnerResponseId, data.OwnerResponseDate, data.OwnerResponseDays, data.AgencyResponseToDebtorDate, data.TotalResponseTimeDays, data.DebtorAgreeYN, data.NeedFurtherActionYN, data.FinalActionStepId, data.CreatedBy, data.ComplaintDocument, data.DebtOwnerProcessDocument);
                 };
                 self.pimsAccountNumber(account);
-                //self.populateComplainceFromDebtor(debtor.account(), debtor.firstName(), debtor.lastName(), debtor.dob(), debtor.address1(), debtor.address2(), debtor.city(), debtor.state(), debtor.zip(), debtor.ssn(), debtor.phoneCell(), debtor.phoneHome(), debtor.phoneWork(), debtor.debtCurrentBalance(), debtor.debtorPurchaseBalance(), debtor.creditorName());
                 $.ajax({
                     url: baseUrl + '/api/Compliance/',
                     type: "GET",
@@ -780,7 +715,6 @@
                     async: false,
                     success: function (data) {
                         setComplaint(data);
-                        //self.populateComplainceFromDebtor(data[0].Account, data[0].FirstName, data[0].LastName, data[0].DOB, data[0].Address1, data[0].Address2, data[0].City, data[0].State, data[0].Zip, data[0].LastFourSSN, data[0].MobilePhone, data[0].HomePhone, data[0].WorkPhone, ((data[0].DebtCurrentBalance == undefined) ? '' : formatCurrency(data[0].DebtCurrentBalance)), ((data[0].DebtPurchaseBalance == undefined) ? '' : formatCurrency(data[0].DebtPurchaseBalance)), data[0].CreditorName);
                     },
                     error: function (response, errorText) {
                         log(errorText);
@@ -1035,18 +969,6 @@
                     self.complianceModel.complaintID(agencySelected + '-' + self.pimsAccountNumber().substring(5, 10) + '-' + randonNumber);
                 }
 
-            } .bind(self));
-            self.complianceModel.complaintSubmittedToOwner.subscribe(function (yesNoVal) {
-                if (yesNoVal == 'true') {
-                    log(yesNoVal);
-
-                    var todaysDate = new Date();
-                    todaysDate.setDate(todaysDate.getDate());
-                    self.complianceModel.complaintSubmittedDate($.datepicker.formatDate('mm/dd/yy', todaysDate));
-                }
-                else {
-                    self.complianceModel.complaintSubmittedDate = ko.observable('');
-                }
             } .bind(self));
             self.saveComplaint = function () {
                 $('#messageSummary ul').empty();
