--- a/CascadeSolution/Cascade.Web/Areas/Portfolio/Views/AddForm/Index.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Portfolio/Views/AddForm/Index.cshtml
@@ -7,6 +7,7 @@
 
 <link href="@Url.Content("~/Content/dataTables/demo_table.css")" rel="stylesheet" type="text/css" />
 
+@Html.Hidden("userId", (string)(@ViewBag.UserName))
 <style>
     .portfolioGrid thead th {
         padding: 3px 18px 3px 10px;
@@ -262,9 +263,8 @@
     <script src="~/Scripts/portfolio.js" type="text/javascript"></script>
 
     <script type="text/javascript">
-        $(document).ready(function () {
-
-            ko.applyBindings(new portfolioVM());
+        $(document).ready(function () {            
+            ko.applyBindings(new portfolioVM($('#userId').val()));
             $('#closingDt').datepicker();
             $('#cutoffDt').datepicker();
             $('#closingDate-int').datepicker();
