--- a/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Recall/ViewRecall.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Recall/ViewRecall.cshtml
@@ -21,14 +21,14 @@
             </td>
         </tr>
         <tr>
-            <td>Acct Closed Date From:
+            <td>Account Closed Date From:
             </td>
             <td>
                 <input type="text" id="StartDate" data-bind="value:StartDate" />
             </td>
         </tr>
         <tr>
-            <td>Acct Closed Date To:
+            <td>Account Closed Date To:
             </td>
             <td>
                 <input type="text" id="EndDate" data-bind="value:EndDate" />
