--- a/CascadeSolution/Cascade.Web/Views/Account/ChangePassword.cshtml
+++ b/CascadeSolution/Cascade.Web/Views/Account/ChangePassword.cshtml
@@ -1,48 +1,73 @@
 ﻿@model Cascade.Web.Models.ChangePasswordModel
-@{
-    Layout = null;
-}
-<!DOCTYPE html>
+@{    Layout = null;}
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    @Styles.Render("~/Content/themes/base/css")
-    <title>ChangePassword</title>
+    @Styles.Render("~/Content/themes/base/css") <title>ChangePassword</title>
+    <style>
+        body
+        {
+            background-color: #336699;
+            background-repeat: no-repeat;
+            background-position: center;
+            font-family: Verdana;
+            font-size: 8pt;
+        }
+        table
+        {
+            font-family: Verdana;
+            font-size: 8pt;
+        }
+        .validation-summary-errors
+        {
+        	color:Red;
+        }
+    </style>
 </head>
-<style>
-    body
-    {
-        background-color: #336699;
-        background-repeat: no-repeat;
-        background-position: center;
-        font-family: Verdana;
-        font-size:small;
-    }
-</style>
 <body>
     <div id="changePasswordContainer">
-        Passwords must be at least @Membership.MinRequiredPasswordLength characters long.
+        @if (ViewBag.IsIntialPasswordChange)
+        {
+ @Html.Label("text", "Upon initial system login, each user is required to change their password.")
+        }
+        New passwords must be at least @Membership.MinRequiredPasswordLength characters in length including @Membership.MinRequiredNonAlphanumericCharacters "special" character (e.g. !, $, # etc.)
         @using (Html.BeginForm())
         {
-            @Html.ValidationSummary()
+ @Html.ValidationSummary()
+
 
             <fieldset>
                 <legend>Change Password Form</legend>
-                <ol>
-                    <li>
-                        @Html.LabelFor(m => m.OldPassword)
-                        @Html.PasswordFor(m => m.OldPassword)
-                    </li>
-                    <li>
-                        @Html.LabelFor(m => m.NewPassword)
-                        @Html.PasswordFor(m => m.NewPassword)
-                    </li>
-                    <li>
-                        @Html.LabelFor(m => m.ConfirmPassword)
-                        @Html.PasswordFor(m => m.ConfirmPassword)
-                    </li>
-                </ol>
-                <input type="submit" value="Change password" style="background-color:#336699; color:White"/>
+                <table>
+                    <tr>
+                        <td>Old Password
+                        </td>
+                        <td>
+                            :
+                        </td>
+                        <td>@Html.PasswordFor(m => m.OldPassword)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>New Password
+                        </td>
+                        <td>
+                            :
+                        </td>
+                        <td>@Html.PasswordFor(m => m.NewPassword)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Confirm Password
+                        </td>
+                        <td>
+                            :
+                        </td>
+                        <td>@Html.PasswordFor(m => m.ConfirmPassword)
+                        </td>
+                    </tr>
+                </table>
+                <input type="submit" value="Change password" style="background-color: #336699; color: White" />
             </fieldset>
         }
     </div>
