--- a/CascadeSolution/Cascade.Web/Views/Shared/_LHSMenuPartial.cshtml
+++ b/CascadeSolution/Cascade.Web/Views/Shared/_LHSMenuPartial.cshtml
@@ -155,7 +155,7 @@
                 </ul>
                 </li>
                 <li>@Html.CreateLink("My Account", "Account", "UnderConstruction", "")<ul>
-                    <li>@Html.CreateLink("Change Password", "Index", "UnderConstruction", "")</li>
+                    <li>@Html.CreateLink("Change Password", "ChangePassword", "Account", "")</li>
                     <li>@Html.CreateLink("Send Email", "Index", "UnderConstruction", "")</li>
                     <li>@Html.CreateLink("My Calendar", "Index", "UnderConstruction", "")</li>
                     <li>@Html.CreateLink("Manage Email Subscription", "Index", "UnderConstruction", "")</li>
