--- a/CascadeSolution/Cascade.Web/Views/Shared/_Layout.cshtml
+++ b/CascadeSolution/Cascade.Web/Views/Shared/_Layout.cshtml
@@ -78,8 +78,8 @@
 
     <script type="text/javascript">
 
-        var windlowLocation = window.location.href.split('/');
-        var baseUrl = windlowLocation[0] + '//' + windlowLocation[2]// + windlowLocation[3];
+        //var windlowLocation = window.location.href.split('/');
+        //var baseUrl = windlowLocation[0] + '//' + windlowLocation[2]// + windlowLocation[3];
 
         //log(baseUrl);
         $(document).ready(function () {
