--- a/CascadeSolution/Cascade.Web/Views/Admin/_users.cshtml
+++ b/CascadeSolution/Cascade.Web/Views/Admin/_users.cshtml
@@ -108,7 +108,8 @@
                             :
                         </td>
                         <td>
-                            <input type="text" data-bind="value:roleKeyValue" />
+                            <select data-bind="options:agencies,optionsValue:'Value', optionsCaption:' ',optionsText: 'Text', value: roleKeyValue">
+                            </select>
                         </td>
                     </tr>
                     <tr>
@@ -144,6 +145,30 @@
         self.role = ko.observable('');
         self.roleKeyValue = ko.observable('');
         self.roleKeyTitle = ko.observable('');
+        self.agencies = ko.computed(function () {
+            var localAgencies = [];
+            $.ajax({
+                url: baseUrl + '/api/Lookup/',
+                type: 'GET',
+                contentType: 'application/json',
+                data: { id: 'Agencies' },
+                dataType: 'json',
+                async: false,
+                success: function (data) {
+                    //log(data.length);
+                    if (data.length > 0) {
+                        $.each(data, function (i, item) {
+                            //log(item.Text);
+                            localAgencies.push(item);
+                        });
+                    }
+                },
+                error: function (xhr, status, somthing) {
+                    log(status);
+                }
+            });
+            return localAgencies;
+        }, self);
 
         self.fill = function (id, name, fname, lname, email, role, roleKeyVal) {
             self.userId = id;
